tests/ui/parser/macro/macro-expand-to-match-arm.stderr
error: macro expansion ignores token `=>` and any following
  --> $DIR/macro-expand-to-match-arm.rs:3:18
   |
LL |         $pattern => $block
   |                  ^^
...
LL |         arm!(None => {}),
   |         ---------------- caused by the macro expansion here
   |
   = note: the usage of `arm!` is likely invalid in pattern context
   = note: macros cannot expand to match arms

error: aborting due to 1 previous error

